linux (Samsung): update .config for 5.19.4-rc1

--- a/projects/Samsung/linux/linux.arm.conf
+++ b/projects/Samsung/linux/linux.arm.conf
@@ -1,10 +1,10 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 5.19.2 Kernel Configuration
+# Linux/arm 5.19.4-rc1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="armv7ve-libreelec-linux-gnueabihf-gcc-12.1.0 (GCC) 12.1.0"
+CONFIG_CC_VERSION_TEXT="armv7ve-libreelec-linux-gnueabihf-gcc-12.2.0 (GCC) 12.2.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=120100
+CONFIG_GCC_VERSION=120200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
 CONFIG_AS_VERSION=23900
@@ -3736,6 +3736,7 @@ CONFIG_HID_MONTEREY=y
 # CONFIG_HID_NTI is not set
 # CONFIG_HID_NTRIG is not set
 # CONFIG_HID_ORTEK is not set
+# CONFIG_HID_OUYA is not set
 # CONFIG_HID_PANTHERLORD is not set
 # CONFIG_HID_PENMOUNT is not set
 # CONFIG_HID_PETALYNX is not set
