--- a/projects/Rockchip/devices/RK3399/linux/default/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/default/linux.aarch64.conf
@@ -2120,7 +2120,7 @@ CONFIG_AX88796B_PHY=m
 CONFIG_MICROCHIP_PHY=m
 # CONFIG_MICROCHIP_T1_PHY is not set
 # CONFIG_MICROSEMI_PHY is not set
-# CONFIG_MOTORCOMM_PHY is not set
+CONFIG_MOTORCOMM_PHY=y
 # CONFIG_NATIONAL_PHY is not set
 # CONFIG_NXP_C45_TJA11XX_PHY is not set
 # CONFIG_NXP_TJA11XX_PHY is not set
@@ -2434,6 +2434,12 @@ CONFIG_USB_ZD1201=m
 CONFIG_ZD1211RW=m
 # CONFIG_ZD1211RW_DEBUG is not set
 CONFIG_WLAN_VENDOR_QUANTENNA=y
+# Orange Pi 4 LTS WiFi+BT5.0(CDW.20U5622-00)
+CONFIG_SPARD_WLAN_SUPPORT=y
+CONFIG_RK_WIFI_DEVICE_UWE5622=y
+CONFIG_WLAN_UWE5622=y
+CONFIG_TTY_OVERY_SDIO=y
+# - end of Orange Pi 4 LTS -
 # CONFIG_QTNFMAC_PCIE is not set
 # CONFIG_MAC80211_HWSIM is not set
 CONFIG_USB_NET_RNDIS_WLAN=m
