--- a/projects/Ayn/devices/Odin/packages/odin-bootloader/files/boot/EFI/debian/grub.cfg
+++ b/projects/Ayn/devices/Odin/packages/odin-bootloader/files/boot/EFI/debian/grub.cfg
@@ -3,7 +3,7 @@ set timeout="5"
 
 menuentry "Lakka" {
     set gfxpayload=keep
-    linux /lakka/KERNEL boot=/dev/mmcblk0p1 BOOT_IMAGE=/lakka/KERNEL SYSTEM_IMAGE=/lakka/SYSTEM console=ttyMSM0,115200n8 clk_ignore_unused pd_ignore_unused nofsck fat32-boot firmware.class_path="/usr/lib/firmware" net.ifnames=1
+    linux /lakka/KERNEL boot=/dev/mmcblk0p1 BOOT_IMAGE=/lakka/KERNEL SYSTEM_IMAGE=/lakka/SYSTEM console=ttyMSM0,115200n8 clk_ignore_unused pd_ignore_unused nofsck fat32-boot firmware.class_path="/usr/lib/firmware" net.ifnames=1 odin-workaround
     devicetree /lakka/sdm845-ayn-odin.dtb
 }
 
