Generic kernel config: enable sienna_cichlid support with CONFIG_DRM_AMD_DC_DCN3_0

--- a/projects/Generic/linux/linux.x86_64.conf
+++ b/projects/Generic/linux/linux.x86_64.conf
@@ -4135,7 +4135,7 @@ CONFIG_DRM_AMD_ACP=y
 #
 CONFIG_DRM_AMD_DC=y
 CONFIG_DRM_AMD_DC_DCN=y
-# CONFIG_DRM_AMD_DC_DCN3_0 is not set
+CONFIG_DRM_AMD_DC_DCN3_0=y
 # CONFIG_DRM_AMD_DC_HDCP is not set
 # CONFIG_DRM_AMD_DC_SI is not set
 # end of Display Engine Configuration
