Switch: Use udev to finalize usb gadget to save from systemd looping service restart until cable connected.

--- a/projects/L4T/devices/Switch/packages/usb-gadget-scripts/system.d/umtp-responder.service
+++ b/projects/L4T/devices/Switch/packages/usb-gadget-scripts/system.d/umtp-responder.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Start MTP Service
-Requires=usb-gadget-init.service
-After=usb-gadget-init.service
+Requires=usb-gadget-setup.service
+After=usb-gadget-setup.service
 
 [Service]
 ExecStart=umtprd
