--- a/projects/L4T/devices/Switch/packages/usb-gadget-scripts/system.d/usb-gadget-setup.service
+++ b/projects/L4T/devices/Switch/packages/usb-gadget-scripts/system.d/usb-gadget-setup.service
@@ -1,6 +1,5 @@
 [Unit]
-Description=Init Nintendo Switch Gadget Framework
-Before=usb-gadget-finalize.service
+Description=Setup Nintendo Switch Gadget Framework
 
 [Service]
 ExecStart=/usr/bin/usb-gadget.sh init
