--- a/projects/L4T/devices/Switch/packages/usb-gadget-scripts/system.d/usb-tty.service
+++ b/projects/L4T/devices/Switch/packages/usb-gadget-scripts/system.d/usb-tty.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Start getty on ttyGS0
-Requires=usb-gadget-finalize.service
-After=usb-gadget-finalize.service
+Requires=usb-gadget-setup.service
+After=usb-gadget-setup.service
 
 [Service]
 ExecStart=agetty --local-line 9600 ttyGS0 vt100
