Switch: Update kernel and kernel config

--- a/projects/L4T/devices/Switch/linux/linux.aarch64.conf
+++ b/projects/L4T/devices/Switch/linux/linux.aarch64.conf
@@ -434,7 +434,7 @@ CONFIG_PCI_TEGRA=y
 # CONFIG_PCI_HOST_GENERIC is not set
 # CONFIG_PCI_HOST_THUNDER_PEM is not set
 # CONFIG_PCI_HOST_THUNDER_ECAM is not set
-CONFIG_PCIE_TEGRA_DW=y
+# CONFIG_PCIE_TEGRA_DW is not set
 
 #
 # PCI Endpoint
@@ -1389,7 +1389,7 @@ CONFIG_TEGRA_PCIE_EP_MEM=y
 # CONFIG_NVS_PROXIMITY is not set
 # CONFIG_NVS_TRIGGERED_BUFFER is not set
 CONFIG_TEGRA_PROFILER=y
-CONFIG_EVENTLIB=y
+# CONFIG_EVENTLIB is not set
 
 #
 # SCSI device support
@@ -1621,7 +1621,7 @@ CONFIG_B43_LEDS=y
 # CONFIG_B43_DEBUG is not set
 # CONFIG_B43LEGACY is not set
 CONFIG_BRCMUTIL=y
-CONFIG_BRCMSMAC=y
+# CONFIG_BRCMSMAC is not set
 CONFIG_BRCMFMAC=m
 CONFIG_BRCMFMAC_PROTO_BCDC=y
 CONFIG_BRCMFMAC_PROTO_MSGBUF=y
@@ -2157,8 +2157,8 @@ CONFIG_GPIO_TEGRA=y
 # CONFIG_GPIO_ADNP is not set
 # CONFIG_GPIO_MAX7300 is not set
 # CONFIG_GPIO_MAX732X is not set
-CONFIG_GPIO_PCA953X=y
-CONFIG_GPIO_PCA953X_IRQ=y
+# CONFIG_GPIO_PCA953X is not set
+# CONFIG_GPIO_PCA953X_IRQ is not set
 # CONFIG_GPIO_PCA9570 is not set
 # CONFIG_GPIO_PCF857X is not set
 # CONFIG_GPIO_SX150X is not set
@@ -2617,7 +2617,7 @@ CONFIG_REGULATOR_MAX77620=y
 # CONFIG_REGULATOR_MAX8660 is not set
 # CONFIG_REGULATOR_MAX8952 is not set
 CONFIG_REGULATOR_MAX8973=y
-# CONFIG_REGULATOR_MAX77812 is not set
+CONFIG_REGULATOR_MAX77812=y
 # CONFIG_REGULATOR_MT6311 is not set
 # CONFIG_REGULATOR_PFUZE100 is not set
 # CONFIG_REGULATOR_PV88060 is not set
@@ -2628,10 +2628,10 @@ CONFIG_REGULATOR_PWM=y
 # CONFIG_REGULATOR_TPS62360 is not set
 # CONFIG_REGULATOR_TPS65023 is not set
 # CONFIG_REGULATOR_TPS6507X is not set
-CONFIG_REGULATOR_TPS65132=y
+# CONFIG_REGULATOR_TPS65132 is not set
 # CONFIG_REGULATOR_TPS6524X is not set
 # CONFIG_REGULATOR_TPS61280 is not set
-CONFIG_REGULATOR_PMIC_OTP=y
+# CONFIG_REGULATOR_PMIC_OTP is not set
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_STAGING_MEDIA=y
 CONFIG_MEDIA_CEC=y
@@ -2953,7 +2953,7 @@ CONFIG_BACKLIGHT_PWM=y
 # CONFIG_BACKLIGHT_ADP8870 is not set
 # CONFIG_BACKLIGHT_LM3630A is not set
 # CONFIG_BACKLIGHT_LM3639 is not set
-CONFIG_BACKLIGHT_LP855X=y
+# CONFIG_BACKLIGHT_LP855X is not set
 # CONFIG_BACKLIGHT_LP88XX_I2C is not set
 # CONFIG_BACKLIGHT_LP88XX_SPI is not set
 # CONFIG_BACKLIGHT_GPIO is not set
@@ -3002,7 +3002,7 @@ CONFIG_TEGRA_HDA_DC=y
 # CONFIG_TEGRA_NVSR is not set
 # CONFIG_TEGRA_VRR is not set
 # CONFIG_TEGRA_HDMIVRR is not set
-CONFIG_TEGRA_HDMIHDCP=y
+# CONFIG_TEGRA_HDMIHDCP is not set
 # CONFIG_TEGRA_DEBUG_HDCP is not set
 CONFIG_TEGRA_DPHDCP=y
 # CONFIG_TEGRA_DEBUG_DP_HDCP is not set
@@ -3010,9 +3010,9 @@ CONFIG_TEGRA_DPHDCP=y
 # CONFIG_TEGRA_DC_FAKE_PANEL_SUPPORT is not set
 # CONFIG_TEGRA_CEC_SUPPORT is not set
 CONFIG_TEGRA_T19X_GRHOST=y
-CONFIG_TEGRA_GRHOST_NVDLA=y
-CONFIG_TEGRA_GRHOST_PVA=y
-CONFIG_TEGRA_GRHOST_SLVSEC=y
+# CONFIG_TEGRA_GRHOST_NVDLA is not set
+# CONFIG_TEGRA_GRHOST_PVA is not set
+# CONFIG_TEGRA_GRHOST_SLVSEC is not set
 CONFIG_TEGRA_GRHOST_CAPTURE_SUPPORT=y
 CONFIG_TEGRA_NVMAP=y
 # CONFIG_TEGRA_NVMAP_V2 is not set
@@ -3139,8 +3139,8 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CODEC drivers
 #
 # CONFIG_SND_SOC_AC97_CODEC is not set
-CONFIG_SND_SOC_AD193X=y
-CONFIG_SND_SOC_AD193X_I2C=y
+# CONFIG_SND_SOC_AD193X is not set
+# CONFIG_SND_SOC_AD193X_I2C is not set
 # CONFIG_SND_SOC_ADAU1701 is not set
 # CONFIG_SND_SOC_ADAU7002 is not set
 # CONFIG_SND_SOC_AK4104 is not set
@@ -3149,7 +3149,7 @@ CONFIG_SND_SOC_AD193X_I2C=y
 # CONFIG_SND_SOC_AK4642 is not set
 # CONFIG_SND_SOC_AK5386 is not set
 # CONFIG_SND_SOC_ALC5623 is not set
-CONFIG_SND_SOC_BT_SCO=y
+# CONFIG_SND_SOC_BT_SCO is not set
 # CONFIG_SND_SOC_CS35L32 is not set
 # CONFIG_SND_SOC_CS35L33 is not set
 # CONFIG_SND_SOC_CS42L51_I2C is not set
@@ -3162,7 +3162,7 @@ CONFIG_SND_SOC_BT_SCO=y
 # CONFIG_SND_SOC_CS4271_SPI is not set
 # CONFIG_SND_SOC_CS42XX8_I2C is not set
 # CONFIG_SND_SOC_CS4349 is not set
-CONFIG_SND_SOC_CS53L30=y
+# CONFIG_SND_SOC_CS53L30 is not set
 # CONFIG_SND_SOC_ES8328 is not set
 # CONFIG_SND_SOC_GTM601 is not set
 # CONFIG_SND_SOC_INNO_RK3036 is not set
@@ -3190,7 +3190,7 @@ CONFIG_SND_SOC_SPDIF=y
 # CONFIG_SND_SOC_STA32X is not set
 # CONFIG_SND_SOC_STA350 is not set
 # CONFIG_SND_SOC_STI_SAS is not set
-CONFIG_SND_SOC_TAS2552=y
+# CONFIG_SND_SOC_TAS2552 is not set
 # CONFIG_SND_SOC_TAS5086 is not set
 # CONFIG_SND_SOC_TAS571X is not set
 # CONFIG_SND_SOC_TAS5720 is not set
@@ -3369,7 +3369,7 @@ CONFIG_USB_HIDDEV=y
 #
 # SHIELD accessory HID drivers
 #
-CONFIG_HID_SHIELD_BLAKE=y
+# CONFIG_HID_SHIELD_BLAKE is not set
 # CONFIG_HID_SHIELD_REMOTE is not set
 CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 CONFIG_USB_SUPPORT=y
@@ -3486,7 +3486,7 @@ CONFIG_USB_MICROTEK=y
 # CONFIG_USB_ISIGHTFW is not set
 # CONFIG_USB_YUREX is not set
 # CONFIG_USB_EZUSB_FX2 is not set
-CONFIG_USB_HSIC_USB3503=y
+# CONFIG_USB_HSIC_USB3503 is not set
 # CONFIG_USB_HSIC_USB4604 is not set
 # CONFIG_USB_LINK_LAYER_TEST is not set
 
@@ -3646,7 +3646,7 @@ CONFIG_LEDS_CLASS_FLASH=y
 # CONFIG_LEDS_PCA955X is not set
 # CONFIG_LEDS_PCA963X is not set
 # CONFIG_LEDS_DAC124S085 is not set
-CONFIG_LEDS_THINE350X=y
+# CONFIG_LEDS_THINE350X is not set
 CONFIG_LEDS_PWM=y
 # CONFIG_LEDS_REGULATOR is not set
 # CONFIG_LEDS_BD2802 is not set
@@ -4076,7 +4076,7 @@ CONFIG_ARM_MHU=y
 # CONFIG_PL320_MBOX is not set
 # CONFIG_ALTERA_MBOX is not set
 # CONFIG_MAILBOX_TEST is not set
-CONFIG_BCM_PDC_MBOX=y
+# CONFIG_BCM_PDC_MBOX is not set
 CONFIG_IOMMU_API=y
 CONFIG_IOMMU_SUPPORT=y
 
@@ -4525,7 +4525,7 @@ CONFIG_ARM64_RAS=y
 # CONFIG_TEE is not set
 # CONFIG_TEGRA186_AHC is not set
 CONFIG_NVPMODEL_EMC=y
-CONFIG_TEGRA_NVLINK=y
+# CONFIG_TEGRA_NVLINK is not set
 # CONFIG_NVPPS is not set
 
 #
