Allwinner: linux: workaround EDID reading failure

--- a/projects/Allwinner/linux/linux.aarch64.conf
+++ b/projects/Allwinner/linux/linux.aarch64.conf
@@ -4168,7 +4168,7 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # CONFIG_DRM_CDNS_DSI is not set
 # CONFIG_DRM_CHIPONE_ICN6211 is not set
 # CONFIG_DRM_CHRONTEL_CH7033 is not set
-CONFIG_DRM_DISPLAY_CONNECTOR=y
+# CONFIG_DRM_DISPLAY_CONNECTOR is not set
 # CONFIG_DRM_ITE_IT6505 is not set
 # CONFIG_DRM_LONTIUM_LT8912B is not set
 # CONFIG_DRM_LONTIUM_LT9211 is not set
