Allwinner: H6: linux: Enable iommu

--- a/projects/Allwinner/linux/linux.aarch64.conf
+++ b/projects/Allwinner/linux/linux.aarch64.conf
@@ -5474,7 +5474,7 @@ CONFIG_IOMMU_DEFAULT_DMA_STRICT=y
 # CONFIG_IOMMU_DEFAULT_PASSTHROUGH is not set
 CONFIG_OF_IOMMU=y
 CONFIG_IOMMU_DMA=y
-# CONFIG_SUN50I_IOMMU is not set
+CONFIG_SUN50I_IOMMU=y
 # CONFIG_ARM_SMMU is not set
 # CONFIG_ARM_SMMU_V3 is not set
 
