Switch: Update UCM to work for Frig

--- a/projects/L4T/devices/Switch/packages/switch-alsa-ucm-configs/ucm_data/tegra-snd-t210r/HiFi.conf
+++ b/projects/L4T/devices/Switch/packages/switch-alsa-ucm-configs/ucm_data/tegra-snd-t210r/HiFi.conf
@@ -84,7 +84,7 @@ SectionDevice."Speaker" {
 		cset "name='x SPOR MIX SPKVOL R Switch' on"
 		cset "name='x Stereo DAC MIXL DAC L1 Switch' on"
 		cset "name='x Stereo DAC MIXR DAC R1 Switch' on"
-		cset "name='x DAC1 Speaker Playback Volume' 148,148"
+		cset "name='x DAC1 Speaker Playback Volume' 100%,100%"
 		cset "name='x Speaker Playback Volume' 35,35"
 		cset "name='x Speaker L Playback Switch' on"
 		cset "name='x Speaker R Playback Switch' on"
@@ -95,7 +95,7 @@ SectionDevice."Speaker" {
 		cset "name='x Speaker R Playback Switch' off"
 		cset "name='x Speaker Channel Switch' off,off"
 		cset "name='x Speaker Playback Volume' 35,35"
-		cset "name='x DAC1 Speaker Playback Volume' 0,0"
+		cset "name='x DAC1 Speaker Playback Volume' 0%,0%"
 		cset "name='x SPK MIXL DAC L1 Switch' off"
 		cset "name='x SPK MIXR DAC R1 Switch' off"
 		cset "name='x SPOL MIX SPKVOL L Switch' off"
